# persona_crew

./: README.md  pyproject.toml
src/persona_project/: crew.py  main.py
src/persona_project/config/: agents.yaml  tasks.yaml
src/persona_project/data/: questionnaire.yml
src/persona_project/tools/: persona_tools.py
