[project]
name = "persona_project"
version = "0.1.0"
description = "persona_project using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.152.0,<1.0.0"
]

[project.scripts]
persona_project = "persona_project.main:run"
run_crew = "persona_project.main:run"
train = "persona_project.main:train"
replay = "persona_project.main:replay"
test = "persona_project.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
